--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -102,11 +102,13 @@
                                 <i class="bi bi-shield-check"></i> Panel Admin
                             </small>
                         </li>
+                        {# Módulo de usuarios pendiente de implementar
                         <li>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="{{ url_for('users.index') }}">
                                 <i class="bi bi-people"></i> Gestión de Usuarios
                             </a>
                         </li>
+                        #}
                         {% endif %}
                         <li><hr class="dropdown-divider"></li>
                         <li>
